--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -648,8 +648,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "VHnEcNj7Fr4h"
+      },
+      "source": [
+        "#Quede aqui, graficar la prediccion de test incluyendo agosto - dic 2020"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "7ZZ5F9WBb99E",
-        "outputId": "d4c5ab13-7f4f-43fb-a448-72da667957e0",
+        "outputId": "87a308e9-3bd4-425c-815d-8aa3dcf1838e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 171
@@ -658,7 +669,7 @@
       "source": [
         "grupo.corr(method ='pearson')"
       ],
-      "execution_count": null,
+      "execution_count": 439,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -732,7 +743,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 131
+          "execution_count": 439
         }
       ]
     }
