--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -330,13 +330,101 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z8BJoYLEN3I5"
+        "id": "z8BJoYLEN3I5",
+        "outputId": "3122052a-b3c7-4853-d393-73554b91ee42",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        }
       },
       "source": [
         "grupo.head(5)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Año</th>\n",
+              "      <th>Mes</th>\n",
+              "      <th>Antiguedad</th>\n",
+              "      <th>Cant_Bajas</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>29</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>28</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>35</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>1</td>\n",
+              "      <td>4</td>\n",
+              "      <td>125</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>587</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Año  Mes  Antiguedad  Cant_Bajas\n",
+              "0  2019    1           1          29\n",
+              "1  2019    1           2          28\n",
+              "2  2019    1           3          35\n",
+              "3  2019    1           4         125\n",
+              "4  2019    1           5         587"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 134
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -575,14 +663,14 @@
         "    y_g_p.append(acump12)\n",
         "  "
       ],
-      "execution_count": 118,
+      "execution_count": 127,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "SacM1SUXwoMA",
-        "outputId": "9d5df2a6-fe78-4f15-feb2-baf531c8e0e5",
+        "outputId": "2e5da634-07bc-4769-a1a4-44b4d0799970",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -617,7 +705,7 @@
         "plt.ylabel (\"Cantidad\" )\n",
         "plt.show()"
       ],
-      "execution_count": 119,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "display_data",
@@ -759,14 +847,14 @@
         "    y_g_p_t.append(acump12)\n",
         "  "
       ],
-      "execution_count": 110,
+      "execution_count": 129,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "hXzIBtJzry2W",
-        "outputId": "45bf11ce-f5bf-4e46-8fb3-f9b1d7577106",
+        "outputId": "27f68e06-ea68-46ce-c22c-917253852540",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -801,7 +889,7 @@
         "plt.ylabel (\"Cantidad\" )\n",
         "plt.show()"
       ],
-      "execution_count": 117,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "display_data",
@@ -817,6 +905,31 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6p6NiWKGEgIc"
+      },
+      "source": [
+        "c_anio = [\"2020\"] * 35\n",
+        "c_mes = [\"8\"] * 7 + [\"9\"] * 7 + [\"10\"] * 7 + [\"11\"] * 7 + [\"12\"] * 7\n",
+        "c_antiguedad = [1,2,3,4,5,6,7] + [1,2,3,4,5,6,7] +[1,2,3,4,5,6,7] +[1,2,3,4,5,6,7] +[1,2,3,4,5,6,7]  \n",
+        "df2 = pd.DataFrame({\"Año\": c_anio, \"Mes\": c_mes, \"Antiguedad\": c_antiguedad})"
+      ],
+      "execution_count": 137,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6Ag1VV_nEwNh"
+      },
+      "source": [
+        "df2"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
