--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -330,101 +330,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z8BJoYLEN3I5",
-        "outputId": "3122052a-b3c7-4853-d393-73554b91ee42",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 195
-        }
+        "id": "z8BJoYLEN3I5"
       },
       "source": [
         "grupo.head(5)"
       ],
-      "execution_count": 134,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Año</th>\n",
-              "      <th>Mes</th>\n",
-              "      <th>Antiguedad</th>\n",
-              "      <th>Cant_Bajas</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>29</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>28</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>35</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>1</td>\n",
-              "      <td>4</td>\n",
-              "      <td>125</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>1</td>\n",
-              "      <td>5</td>\n",
-              "      <td>587</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "    Año  Mes  Antiguedad  Cant_Bajas\n",
-              "0  2019    1           1          29\n",
-              "1  2019    1           2          28\n",
-              "2  2019    1           3          35\n",
-              "3  2019    1           4         125\n",
-              "4  2019    1           5         587"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 134
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1196,7 +1108,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xAebe_Wnug3X"
+        "id": "xAebe_Wnug3X",
+        "outputId": "0230a662-c7e8-40b2-a97a-255f9dabc676",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print('Datos del modelo de Regresión')\n",
@@ -1206,8 +1122,75 @@
         "print('\"Valor de la Intersección \"b\":')\n",
         "print(lineal_poly.intercept_)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Datos del modelo de Regresión\n",
+            "\n",
+            "\"Valor de la pendiente o coeficiente \"a\":\n",
+            "[[-1.87103758e-02 -1.10534783e-02 -9.19002290e-03 -8.09573142e-02\n",
+            "   8.25601427e-03 -6.37793851e-04  5.10896656e-02  4.29816632e-02\n",
+            "  -5.33724141e-06  7.49705740e-02 -2.34914078e-02  2.82738283e-05\n",
+            "   1.20773774e-05 -2.11114793e-07  6.78207934e-08 -1.34211672e-09\n",
+            "  -1.75840524e-07 -2.37060581e+01  5.38258348e+03 -1.64873662e-02\n",
+            "  -4.00993364e-10 -5.24876782e-08  7.73025386e-06  3.87888477e-09\n",
+            "  -2.75187517e-09 -1.66480693e+01  8.56397435e+03 -6.13910033e-02\n",
+            "   1.80002644e-08  7.44421413e-10  3.20903304e-11  1.38606993e-09\n",
+            "  -6.19895448e+01  2.87561200e+04  5.61059160e-03 -5.70018477e-11\n",
+            "  -1.74276621e-10  4.25431912e-11  5.66529173e+00  3.67489338e+03\n",
+            "  -3.89240890e-03 -2.07501216e-09 -3.45607987e-11 -3.93036503e+00\n",
+            "   7.63541279e+03  5.26101679e-02  4.09841050e-11  5.31230946e+01\n",
+            "  -6.49572394e+03  4.70271427e-02  4.74856399e+01 -4.75171850e+04\n",
+            "   5.65438692e-07  7.57106601e+01 -2.18279747e+04 -2.34771582e-02\n",
+            "   0.00000000e+00 -7.27595761e-12  6.82121026e-13 -9.09494702e-13\n",
+            "  -9.09494702e-13 -9.09494702e-13 -2.37060542e+01  5.38258348e+03\n",
+            "   0.00000000e+00  4.54747351e-13  9.09494702e-13 -4.54747351e-13\n",
+            "   0.00000000e+00  8.47032947e-22  4.23516474e-22  8.47032947e-22\n",
+            "  -3.38813179e-21  8.47032947e-21 -2.11758237e-22 -4.23516474e-22\n",
+            "   4.23516474e-22 -2.64697796e-23  0.00000000e+00 -1.98523347e-23\n",
+            "   2.64697796e-23  2.64697796e-23  8.27180613e-25  2.48154184e-24\n",
+            "   8.27180613e-25 -8.27180613e-25 -2.06795153e-25  0.00000000e+00\n",
+            "   1.80945759e-25  4.13590306e-25 -5.16987883e-26 -1.03397577e-25\n",
+            "   2.58493941e-26  3.87740912e-26  0.00000000e+00  0.00000000e+00\n",
+            "  -5.16987883e-26  2.28821735e-02  5.50011209e+00 -3.12063241e+03\n",
+            "  -1.64873236e-02  0.00000000e+00  0.00000000e+00  2.01948392e-28\n",
+            "   0.00000000e+00  0.00000000e+00 -1.66480693e+01  8.56397435e+03\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  1.58920730e-02  2.35109479e+00 -3.12124685e+03\n",
+            "  -6.13910090e-02  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00 -6.19895448e+01  2.87561200e+04  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  6.07799318e-02 -1.76354079e+01 -3.12320681e+03\n",
+            "   5.61059217e-03  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   5.66529173e+00  3.67489338e+03  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00 -6.17934127e-03  7.18229359e+00\n",
+            "  -3.11998759e+03 -3.89241053e-03  0.00000000e+00  0.00000000e+00\n",
+            "  -3.93036503e+00  7.63541279e+03  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+            "   0.00000000e+00  3.46588713e-03  3.24703036e+00 -3.11938869e+03\n",
+            "   5.26101676e-02  0.00000000e+00  5.31230946e+01 -6.49572394e+03\n",
+            "   0.00000000e+00  0.00000000e+00  0.00000000e+00 -5.31267760e-02\n",
+            "   1.72556946e+01 -3.12022696e+03  4.70271421e-02  4.74856399e+01\n",
+            "  -4.75171850e+04 -4.74691435e-02  5.78100025e+01 -3.10328540e+03\n",
+            "   7.09082437e-06 -4.28315426e-02  1.23443980e+01  1.31938801e+00]]\n",
+            "\"Valor de la Intersección \"b\":\n",
+            "[-56051.22424385]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
