--- a/Regresión/borrador.ipynb
+++ b/Regresión/borrador.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 1,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "115ee428-2af7-4f34-fa40-fd26ccb83190",
+        "outputId": "3d9ce70d-fb8b-46af-d4d2-4927e1b1f305",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -81,12 +81,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -95,14 +95,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0JYqth2Ty8-k"
+        "id": "0JYqth2Ty8-k",
+        "outputId": "77b7422e-4154-4859-f74f-53cc34821939",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/M_BAJAS.txt',delimiter='~')\n",
         "data.Fecha = pd.to_datetime(data.FECHA_BAJA)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:2: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
+            "  \n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -124,7 +137,7 @@
         "encabezados= ['Año','Mes','Fecha','Antiguedad','Cant_Bajas']\n",
         "data.columns=encabezados"
       ],
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -190,14 +203,14 @@
         "names=['1','2','3','4','5','6','7']\n",
         "data['Antiguedad'] = pd.cut(data['Antiguedad'],bins,labels=names)"
       ],
-      "execution_count": null,
+      "execution_count": 102,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "t_YnKeJCPmXl",
-        "outputId": "4ada3666-a4be-4f5c-9203-553060e94c3c",
+        "outputId": "a85bd86c-4075-4adf-f906-694b1dbdcee4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49
@@ -207,7 +220,7 @@
         "#validamos datos sin clasificar\n",
         "data[pd.isnull(data.Antiguedad)]"
       ],
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +265,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 57
         }
       ]
     },
@@ -265,7 +278,7 @@
         "#pasamos datos a clasificados a entero\n",
         "data['Antiguedad'] = data['Antiguedad'].astype('int64')"
       ],
-      "execution_count": null,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -282,52 +295,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ez1C_xIJptVL"
-      },
-      "source": [
-        "data.head(5)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DN0uT17ujuNd"
-      },
-      "source": [
-        " #validamos datos faltantes\n",
-        " print(pd.isnull(data).sum())"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "74Ihp7XaMISv"
-      },
-      "source": [
-        "grupo = data.groupby(by = ['Año','Mes','Antiguedad']).sum()\n",
-        "grupo= pd.DataFrame(grupo).reset_index()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "z8BJoYLEN3I5",
-        "outputId": "1518b6e9-c5ef-4e54-a10e-8a3968087bba",
+        "id": "Ez1C_xIJptVL",
+        "outputId": "13eebd38-4554-4e1d-ad35-fe8de987e7f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         }
       },
       "source": [
-        "grupo.head(5)"
+        "data.head(5)"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,6 +331,7 @@
               "      <th></th>\n",
               "      <th>Año</th>\n",
               "      <th>Mes</th>\n",
+              "      <th>Fecha</th>\n",
               "      <th>Antiguedad</th>\n",
               "      <th>Cant_Bajas</th>\n",
               "    </tr>\n",
@@ -361,55 +340,188 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>2019</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>29</td>\n",
+              "      <td>11</td>\n",
+              "      <td>01/11/2019</td>\n",
+              "      <td>6</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>2019</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>4</td>\n",
+              "      <td>01/04/2020</td>\n",
+              "      <td>6</td>\n",
               "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>28</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>2019</td>\n",
+              "      <td>11</td>\n",
+              "      <td>05/11/2019</td>\n",
+              "      <td>7</td>\n",
               "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>35</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>2019</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>2</td>\n",
+              "      <td>01/02/2020</td>\n",
+              "      <td>7</td>\n",
               "      <td>1</td>\n",
-              "      <td>4</td>\n",
-              "      <td>125</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>2019</td>\n",
+              "      <td>8</td>\n",
+              "      <td>01/08/2019</td>\n",
+              "      <td>6</td>\n",
               "      <td>1</td>\n",
-              "      <td>5</td>\n",
-              "      <td>587</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "    Año  Mes  Antiguedad  Cant_Bajas\n",
-              "0  2019    1           1          29\n",
-              "1  2019    1           2          28\n",
-              "2  2019    1           3          35\n",
-              "3  2019    1           4         125\n",
-              "4  2019    1           5         587"
+              "    Año  Mes       Fecha  Antiguedad  Cant_Bajas\n",
+              "0  2019   11  01/11/2019           6           3\n",
+              "1  2020    4  01/04/2020           6           1\n",
+              "2  2019   11  05/11/2019           7           1\n",
+              "3  2020    2  01/02/2020           7           1\n",
+              "4  2019    8  01/08/2019           6           1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DN0uT17ujuNd"
+      },
+      "source": [
+        " #validamos datos faltantes\n",
+        " print(pd.isnull(data).sum())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C9htqogiQXbx"
+      },
+      "source": [
+        "data.drop(['Año'], axis = 'columns', inplace=True)"
+      ],
+      "execution_count": 114,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "74Ihp7XaMISv"
+      },
+      "source": [
+        "grupo = data.groupby(by = ['Mes','Antiguedad']).sum()\n",
+        "grupo= pd.DataFrame(grupo).reset_index()"
+      ],
+      "execution_count": 115,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z8BJoYLEN3I5",
+        "outputId": "4402ab34-e6e2-43ee-ae62-dd40fdcfdeae",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "grupo.head(5)"
+      ],
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Mes</th>\n",
+              "      <th>Antiguedad</th>\n",
+              "      <th>Cant_Bajas</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>47</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>44</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>45</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>4</td>\n",
+              "      <td>212</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>1167</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Mes  Antiguedad  Cant_Bajas\n",
+              "0    1           1          47\n",
+              "1    1           2          44\n",
+              "2    1           3          45\n",
+              "3    1           4         212\n",
+              "4    1           5        1167"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 116
         }
       ]
     },
@@ -444,10 +556,10 @@
       "source": [
         "x= grupo.iloc[:,:-1].values\n",
         "x=np.array(x)\n",
-        "y= grupo.iloc[:,3].values\n",
+        "y= grupo.iloc[:,2].values\n",
         "y = y[:,np.newaxis]"
       ],
-      "execution_count": null,
+      "execution_count": 180,
       "outputs": []
     },
     {
@@ -457,14 +569,14 @@
       },
       "source": [
         "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
-        "from sklearn.compose import ColumnTransformer\n",
         "\n",
-        "labelencoder= LabelEncoder()\n",
-        "x[:,2] = labelencoder.fit_transform(x[:,2])\n",
-        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[2])],remainder='passthrough')\n",
-        "x=np.array(ct.fit_transform(x),dtype=np.int)"
+        "labelencoder = LabelEncoder ()\n",
+        "x [:, 1] = labelencoder.fit_transform (x [:, 1])\n",
+        " \n",
+        "Oencoder = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[1])],remainder='passthrough')\n",
+        "x= Oencoder.fit_transform(x).toarray()"
       ],
-      "execution_count": null,
+      "execution_count": 182,
       "outputs": []
     },
     {
