--- a/Regresión/borrador.ipynb
+++ b/Regresión/borrador.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 200,
+      "execution_count": 247,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "2123de9c-7ed2-43cf-b666-f3e9924fe19b",
+        "outputId": "f4cd5a78-0944-4fb8-b197-62084899fe6b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -81,7 +81,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 201,
+      "execution_count": 248,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0JYqth2Ty8-k",
-        "outputId": "a8c4e850-7338-49c8-99b8-a22d428f908b",
+        "outputId": "99b9f58a-3bf3-467c-96a6-114216dd4271",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -105,7 +105,7 @@
         "data = pd.read_csv('/content/drive/My Drive/Dataset/M_BAJAS.txt',delimiter='~')\n",
         "data.Fecha = pd.to_datetime(data.FECHA_BAJA)"
       ],
-      "execution_count": 202,
+      "execution_count": 249,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "encabezados= ['Año','Mes','Fecha','Antiguedad','Cant_Bajas']\n",
         "data.columns=encabezados"
       ],
-      "execution_count": 203,
+      "execution_count": 250,
       "outputs": []
     },
     {
@@ -203,20 +203,71 @@
         "names=['1','2','3','4','5','6','7']\n",
         "data['Antiguedad'] = pd.cut(data['Antiguedad'],bins,labels=names)"
       ],
-      "execution_count": 204,
+      "execution_count": 251,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t_YnKeJCPmXl"
+        "id": "t_YnKeJCPmXl",
+        "outputId": "6ebcf74f-890b-4c71-f5d4-925885679a65",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 49
+        }
       },
       "source": [
         "#validamos datos sin clasificar\n",
         "data[pd.isnull(data.Antiguedad)]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 253,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Año</th>\n",
+              "      <th>Mes</th>\n",
+              "      <th>Fecha</th>\n",
+              "      <th>Antiguedad</th>\n",
+              "      <th>Cant_Bajas</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: [Año, Mes, Fecha, Antiguedad, Cant_Bajas]\n",
+              "Index: []"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 253
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -227,25 +278,59 @@
         "#pasamos datos a clasificados a entero\n",
         "data['Antiguedad'] = data['Antiguedad'].astype('int64')"
       ],
-      "execution_count": 205,
+      "execution_count": 252,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GWnAOMUBv4Ph"
+        "id": "HJ2jMqGcg61E"
+      },
+      "source": [
+        "data1= data[data.Año == 2019 ] \n",
+        "data2= data[data.Año == 2020 ] "
+      ],
+      "execution_count": 269,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GWnAOMUBv4Ph",
+        "outputId": "175c6908-4de1-4fca-f991-fe9b9daeb557",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "data.dtypes"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 271,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Año            int64\n",
+              "Mes            int64\n",
+              "Fecha         object\n",
+              "Antiguedad     int64\n",
+              "Cant_Bajas     int64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 271
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Ez1C_xIJptVL",
-        "outputId": "ad9026f8-5228-409b-db6c-f2495f608cbd",
+        "outputId": "bb0c6132-ce59-484d-be70-0685122d0d61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -254,7 +339,7 @@
       "source": [
         "data.head(5)"
       ],
-      "execution_count": 206,
+      "execution_count": 268,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,7 +427,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 206
+          "execution_count": 268
         }
       ]
     },
@@ -364,20 +449,9 @@
         "id": "C9htqogiQXbx"
       },
       "source": [
-        "data.drop(data[data.Año == 2019 ].index, inplace = True)"
+        "data1.drop(data1[data1.Año == 2020 ].index, inplace = True)"
       ],
-      "execution_count": 208,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SzxcfOftfxar"
-      },
-      "source": [
-        "data"
-      ],
-      "execution_count": null,
+      "execution_count": 244,
       "outputs": []
     },
     {
